# rustic-clipboard

./: .gitignore  Cargo.toml  README.md
src/lib/: mod.rs
src/lib/data/: mod.rs  model.rs  query.rs
src/lib/domain/: maintenance.rs  time.rs
src/lib/domain/clip/: mod.rs
src/lib/domain/clip/field/: clip_id.rs  content.rs  expires.rs  hits.rs  password.rs  posted.rs  shortcode.rs  title.rs
src/lib/service/: action.rs  ask.rs  mod.rs
src/lib/web/: api.rs  hitcounter.rs  http.rs  mod.rs  renderer.rs
templates/: base.hbs  footer.hbs  header.hbs
