[package]
name = "rusticlipboard"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusticlipboard"
path = "src/lib/mod.rs"

[dependencies]
dotenv = "0.15.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
chrono = {version = "0.4.24", features = ["serde"]}
uuid = {version = "1.3.0", features = ["serde", "v4"]}
derive_more = "0.99"
rand = "0.8.4"
sqlx = {version = "0.5", features = ["sqlite", "runtime-tokio-rustls", "macros", "chrono", "uuid"]}